[gd_scene load_steps=14 format=2]

[ext_resource path="res://gui.gd" type="Script" id=1]
[ext_resource path="res://space_theme_ui/metalPanel.png" type="Texture" id=2]
[ext_resource path="res://space_theme_ui/metalPanel_plate.png" type="Texture" id=3]
[ext_resource path="res://fonts/font_kenvector.tres" type="DynamicFont" id=4]
[ext_resource path="res://warn_blink.tscn" type="PackedScene" id=5]
[ext_resource path="res://space_theme_ui/square_shadow.png" type="Texture" id=6]
[ext_resource path="res://space_theme_ui/squareBlue.png" type="Texture" id=7]
[ext_resource path="res://space_theme_ui/squareYellow.png" type="Texture" id=8]
[ext_resource path="res://fuel_tank.png" type="Texture" id=9]
[ext_resource path="res://fuel.png" type="Texture" id=10]
[ext_resource path="res://rc_fuel_tank.png" type="Texture" id=11]
[ext_resource path="res://rc_fuel.png" type="Texture" id=12]
[ext_resource path="res://winner_overlay.png" type="Texture" id=13]

[node name="GUI" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
main_fuel_warning_treshold = 0.2
rc_fuel_warning_treshold = 0.15

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="NinePatchRect" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 354.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Axis Stretch", "Patch Margin" ]

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 323.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 303.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MainFuelDisplay" type="Container" parent="Control/Panel/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 295.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="LabelBackgroundMainFuel" type="NinePatchRect" parent="Control/Panel/MarginContainer/VBoxContainer/MainFuelDisplay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 303.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Margin", "Patch Margin" ]

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/MainFuelDisplay/LabelBackgroundMainFuel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 5.0
margin_right = 293.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Main Engine Fuel"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Main_Fuel_Warning" parent="Control/Panel/MarginContainer/VBoxContainer/MainFuelDisplay" index="1" instance=ExtResource( 5 )]

margin_left = 0.0
margin_top = 40.0
margin_right = 303.0
margin_bottom = 40.0

[node name="MainFuel_Bar" type="TextureProgress" parent="Control/Panel/MarginContainer/VBoxContainer/MainFuelDisplay" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 43.0
margin_right = 301.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.1
page = 0.0
value = 75.0
exp_edit = false
rounded = false
texture_under = ExtResource( 6 )
texture_over = null
texture_progress = ExtResource( 7 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
_sections_unfolded = [ "Textures" ]

[node name="RCFuelDisplay" type="Container" parent="Control/Panel/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 82.0
margin_right = 295.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="LabelBackgroundRC" type="NinePatchRect" parent="Control/Panel/MarginContainer/VBoxContainer/RCFuelDisplay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 12.0
margin_right = 303.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Margin", "Patch Margin" ]

[node name="Label2" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/RCFuelDisplay/LabelBackgroundRC" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "RC Thruster fuel"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RC_Fuel_Warning" parent="Control/Panel/MarginContainer/VBoxContainer/RCFuelDisplay" index="1" instance=ExtResource( 5 )]

margin_left = 0.0
margin_top = 48.0
margin_right = 303.0
margin_bottom = 48.0

[node name="RCFuel_Bar" type="TextureProgress" parent="Control/Panel/MarginContainer/VBoxContainer/RCFuelDisplay" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 51.0
margin_right = 301.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.1
page = 0.0
value = 75.0
exp_edit = false
rounded = false
texture_under = ExtResource( 6 )
texture_over = null
texture_progress = ExtResource( 8 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
_sections_unfolded = [ "Textures" ]

[node name="fuel_tank" type="Sprite" parent="Control/Panel" index="1"]

visible = false
position = Vector2( 36.7455, 51.5805 )
texture = ExtResource( 9 )

[node name="fuel" type="Sprite" parent="Control/Panel" index="2"]

visible = false
position = Vector2( 53.8074, 84.3012 )
rotation = -3.14159
texture = ExtResource( 10 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 65 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="rc_fuel_tank" type="Sprite" parent="Control/Panel" index="3"]

visible = false
position = Vector2( 37.5019, 140.864 )
texture = ExtResource( 11 )

[node name="rc_fuel" type="Sprite" parent="Control/Panel" index="4"]

visible = false
position = Vector2( 50.486, 164.63 )
rotation = 3.14159
scale = Vector2( 0.987764, 1.00884 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 28, 54 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Winner" type="Sprite" parent="Control" index="1"]

visible = false
position = Vector2( 507.579, 272.349 )
scale = Vector2( 3.97904, 3.97904 )
texture = ExtResource( 13 )


